@@ -1,7 +1,10 @@
 4.00.329
 
 Fix issue with multiline triggers with a 0 timeout duration not being infinite time
-
+Remove connection point OLE code, hasn't been used in decades
+Add window title setting to input windows (mainly useful for scripts)
+Add IWindowMain::GetSpawnTabs and IWindowMain::GetInput to allow scripts to do actions on spawn tab switching
+With restore logs, spawn triggers will only add to existing windows/tabs vs creating new ones
 
 4.00.328 - 2024-11-18
 
